--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.15.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -17,12 +18,13 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "amqplib": "^0.10.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "init": "^0.1.2",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
