--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-share": "^5.2.2",
     "sonner": "^2.0.3",
     "tailwind": "^2.3.1",
     "tailwind-merge": "^3.0.2",
