--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "prisma": "^6.5.0",
+    "supabase": "^2.34.3",
     "typescript": "^5"
   }
 }
